<resources>
    <string name="app_name">Внешнее пилотирвание</string>
    <string name="Introduction">Введение</string>
    <string name="Documentation">Докуметнация</string>
    <string name="Simulator">Симулятор Geoscan Trainer</string>
    <string name="pilot_eds">Пилот. самолета с ЭД</string>
    <string name="pilot_dvs">Пилот. самолета с ДВС</string>
    <string name="pilot_kva">Пилот. квадракоптера</string>
    <string name="processing">Обработка данных</string>
    <string name="diagnostic">Диагностика</string>
    <string name="other">Другое</string>
    <string name="corporation">О создателе</string>
    <string name="pay">Вопросы</string>
    <string name="module">Модули</string>
    <string name="button">Источник</string>

    <!-- Введение -->

    <string name="intr">Компетенция направлена на демонстрацию внешним экипажем БВС основных навыков и умений
        в области эксплуатации БВС. Среди них – БВС вертолетного типа, самолетного типа как с электродвигателем,
        так и с ДВС. При работе с БВС участники также показывают навыки обработки данных дистанционного зондирования Земли. Подобная квалификация позволяет решать задачи в сфере картографии, геодезии, градостроительства, в энергетике и других отраслях.</string>
    <!-- Документация -->
    <string name="zav0">Заявление на полеты</string>
    <string name="zav1">Заявление в администрацию составляют в свободной форме
В заявлении должны быть указаны:- регистрационный (учетный), заводской номера БВС- даты, время начала и конца работы- резервные дни - координаты точек взлета и посадки - зона полета - все населенные пункты по маршруту
</string>
    <string name="zav3">Представление на полет</string>
    <string name="zav6">Шаблон</string>
    <string name="zav7">Пример</string>
    <string name="zav8">Задание</string>
    <string name="zav5">План полета</string>
    <string name="zav9">Шаблон</string>
    <string name="zav10">Пример</string>
    <string name="zav11">Задание</string>
    <string name="zav4">Сначала скачайте документ и в нем вносите правки!!!
В противном случае всю вашу информацию увидят другие пользователи!</string>
    <string name="sborka">Задание</string>
    <string name="sborkaPar">Задание</string>
    <string name="zav">Задание</string>


    <!-- Geoscan treaner -->
    <string name="sim1">Симулятор Geoscan Trainer</string>
    <string name="sim2">Пока мы сидим в аудитории, мы можем научиться управлять самолетом, благодаря симулятору. Симулятор представляет собой имитационную модель самолета, где можно настраивать как сам полет, так и внештатные ситуации:
Для начала откроем Geoscan Planner и Geoscan Trainer. Geoscan Planner - программа, в которой мы создаем полетное задание. Geoscan Trainer - имитационная модель нашего воздушного судна.
Удобнее всего развернуть  приложения на пол экрана каждое:</string>
    <string name="sim3">Создадим новый проект. Для этого в Geoscan Planner выберем вкладку Проект->Новый проект:</string>
    <string name="sim4">Введем данные по проекту. Имя выбираем произвольное. Все остальные данные выбираем в соответствии с изображением:</string>
    <string name="sim6">Отлично теперь мы создали проект. Теперь перейдем к настройке подключения виртуального симулятора к Geoscan Planner. </string>
    <string name="sim7">Однако прежде чем подключиться нам необходимо запустить симуляцию в Geoscan Trainer. </string>
    <string name="sim8">Нажмите кнопку "Добавить позицию". Затем необходимо выбрать место на карте:</string>
    <string name="sim9">После того, как все выбрали, нажимаем кнопку "ОК" и ждем завершения процесса запуска симуляции.
Симуляция запущена:</string>
    <string name="sim10">Выберем режим эксперта и вновь попробуем подключиться:</string>
    <string name="sim11">Ура! Мы запустили симуляцию!</string>
    <string name="sim12">Пришло время создать полетное задание. Используйте инструменты для создания полетного задания:</string>
    <string name="sim13">Площадная аэрофотосъемка</string>
    <string name="sim14">Площадная аэрофотосъемка – съемка полигонов. Полигон – это область, ограниченная многоугольником. Оператор задает вершины многоугольника, а программа автоматически рассчитывает маршрут обхода.</string>
    <string name="sim15">1. Нажмите на значок Создать площадную аэрофотосъемку на панели инструментов.</string>
    <string name="sim16">Создание площадной аэрофотосъемки</string>
    <string name="sim18">Задайте на карте угловые точки исследуемого участка местности. Программа автоматически рассчитает маршрут обхода полигона. При построении маршрута отображаются набор высоты и снижение БЛА в виде цилиндров, если разница высот соседних точек превышает 30 метров. Если БЛА набирает высоту, то цилиндр залит оранжевым цветом, иначе – синим.</string>
    <string name="sim19">Цилиндры набора высоты и снижения</string>
    <string name="sim20">Добавление и удаление вершин полигона</string>
    <string name="sim21">В готовый полигон можно добавлять вершины.</string>
    <string name="sim22">С зажатой левой кнопкой мыши переместите среднюю точку стороны полигона.</string>
    <string name="sim23">Добавление вершины</string>
    <string name="sim24">Вершина будет создана автоматически. В плавающем окне рядом с вершиной отобразятся ее координаты.</string>
    <string name="sim25">Результат добавления вершины</string>
    <string name="sim26">Для удаления вершины:</string>
    <string name="sim27">1. нажмите на вершину правой кнопкой мыши;</string>
    <string name="sim28">2. в контекстном меню выберите Удалить вершину.</string>
    <string name="sim29">Изменение направления линий облета</string>
    <string name="sim30">Необходимость оптимизировать полигон «по направлению» возникает, например, если на месте проведения работ сила и направление ветра неблагоприятны (сильный ветер вдоль линий облета полигона). Для изменения типа оптимизации щелкните правой кнопкой мыши на полигоне и выберите в контекстном меню вариант Оптимизация «направление».</string>
    <string name="sim31">Оптимизация по направлению</string>
    <string name="sim32">Одна из вершин полигона будет подсвечена, на ней появится поводок для задания направления.</string>
    <string name="sim33">Корректировка направления облета</string>
    <string name="sim34">Результатом будет новый маршрут облета полигона по заданному направлению.</string>
    <string name="sim35">Новый маршрут облета</string>
    <string name="sim36">Изменение точки входа</string>
    <string name="sim37">Если необходимо сменить точку входа в полигон, то выполните следующие действия:</string>
    <string name="sim38">1. Выделите полигон.</string>
    <string name="sim39"> Выделенный полигон</string>
    <string name="sim40">1. Правой кнопкой мыши выделите точку, в которой нужно осуществить вход.</string>
    <string name="sim41">2. В появившемся контекстном меню выберите Начать здесь.</string>
    <string name="sim42">Изменение точки входа в полигон</string>
    <string name="sim43">У выбранной точки входа появится флажок </string>
    <string name="sim44">Линейная аэрофотосъемка</string>
    <string name="sim45">Линейная аэрофотосъемка служит для облета линейных протяженных объектов, таких как реки, дороги, линии электропередачи, газо- и нефтепроводы.</string>
    <string name="sim46">1. Нажмите на значок Создать линейную аэрофотосъемку на панели инструментов.</string>
    <string name="sim47">Создание области линейной аэрофотосъемки</string>
    <string name="sim48">1. Однократными щелчками задайте маршрут обхода протяженного объекта по точкам разворотов. Программа автоматически построит линии облета.</string>
    <string name="sim49">Пример линейной аэрофотосъемки</string>
    <string name="sim50">Изменение параметров БЛА в точках разворота</string>
    <string name="sim51">По умолчанию поведение БЛА в точках разворота выбирается автоматически с учетом угла между соседними линиями (развороты на углы до заданного угла автопролета осуществляются пролетом). Для изменения параметров прохождения конкретной вершины щелкните по ней правой кнопкой мыши и выберите нужный параметр разворота.</string>
    <string name="sim52">Настройка параметров прохождения вершины</string>
    <string name="sim53"><b>Разворот с выходом на ЛЗП</b> (линия заданного пути) означает, что БЛА полностью пролетит галс, а затем зайдет на следующий галс с дополнительным маневром («петлей»). Этот вариант гарантирует съемку территории под маршрутом в полном объеме, и он предпочтителен в случае резких разворотов.</string>
    <string name="sim54">/</string>






    <!-- Пилотирование самолета с ЭДС -->
    <string name="name_module1">Внешнее пилотирование беспилотного воздушного судна самолетного типа с ЭД</string>


    <!-- Пилотирование самолета ДВС -->
    <string name="name_module2">Внешнее пилотирование беспилотного воздушного судна самолётного типас ДВС</string>

    <!-- Пилотирование квадракоптера -->
    <string name="name_module3">Внешнее пилотирование беспилотного воздушного судна вертолетного/мультироторного типа</string>


    <!-- Обработка -->
    <string name="name_module4">Обработка данных дистанционного зондирования Земли</string>
    <string name="processing1">Урок 1 </string>
    <string name="processing2">Урок 2</string>
    <string name="processing3">Урок 3</string>
    <string name="processing4">Урок 4</string>
    <string name="processing5">Урок 5</string>
    <string name="processing6">Урок 6</string>
    <string name="processing7">Урок 7</string>






    <!-- Диагностика -->
    <string name="name_module5">Техническое обслуживание и ремонт</string>
    <string name="kva">401</string>
    <string name="pilotEds">201</string>
    <string name="pilotDvs">701</string>
    <string name="diagnost">В этом модуле нужно найти поломки и неисправности на БВС и занести их в форму. Старйтесь писать все максимально подробно и исппользовать только техниеские понятия.</string>
        <!-- Самолет на ЭД-->
        <string name="fus">Фюзеляж</string>
        <string name="Cl">Центроплан левый</string>
        <string name="Cr">Центроплан правый</string>
        <string name="Kl">Законцовка левая</string>
        <string name="Kr">Законццовка правая</string>
        <string name="kile">Кили</string>
        <string name="modem">Модем КРЛ</string>
        <!-- Самолет на ДВС-->

        <!-- Квадракоптер-->



    <!-- О создателе -->
    <string name="name_corporation">Приложение написал Артем Рябов из компании В.С.Ч.Р</string>

    <!-- Вопросы -->
    <string name="qastion">Если у вас остались вопросы? Напишетие мне</string>
    <string name="qastion1">Мой Вконтакте</string>
    <string name="qastion2">Мой Телеграм</string>

</resources>