<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".diagnosticFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="@string/name_module5"
                android:gravity="center"
                android:textSize="30sp"
                android:textColor="@color/orange"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/text"
                style="@style/MyText"
                android:text="@string/diagnost"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/shablon5"
                    android:text="@string/shablon"
                    android:textSize="25sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20sp"/>

                <Button
                    android:id="@+id/primer5"
                    android:text="@string/primer"
                    android:textSize="25sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20sp"/>


            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <Button
                        style="@style/MyButton"
                        android:text="@string/pilotEds"/>

                    <Button
                        style="@style/MyButton"
                        android:text="@string/pilotDvs"/>

                    <Button
                        style="@style/MyButton"
                        android:text="@string/kva"/>

                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:layout_gravity="center_horizontal"
                android:id="@+id/textik"
                android:text="@string/modem"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/natasha"
                android:textSize="25sp"/>

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageButton
                        android:id="@+id/fuselage"
                        android:layout_width="300dp"
                        android:layout_height="400dp"
                        android:src="@drawable/fuselage"
                        android:layout_marginHorizontal="30sp"
                        android:scaleType="centerCrop"/>

                    <ImageButton
                        android:id="@+id/cr"
                        android:layout_width="400dp"
                        android:layout_height="300dp"
                        android:src="@drawable/centersectionright"
                        android:scaleType="centerCrop"
                        android:layout_marginHorizontal="30sp"/>

                    <ImageButton
                        android:id="@+id/tl"
                        android:layout_width="450dp"
                        android:layout_height="400dp"
                        android:src="@drawable/thetipisleft"
                        android:scaleType="centerCrop"
                        android:layout_marginHorizontal="30sp"/>

                    <ImageButton
                        android:id="@+id/cc"
                        android:layout_width="500dp"
                        android:layout_height="400dp"
                        android:src="@drawable/keel"
                        android:scaleType="centerCrop"
                        android:layout_marginHorizontal="30sp"/>


                    <ImageButton
                        android:id="@+id/modem"
                        android:layout_width="500dp"
                        android:layout_height="400dp"
                        android:src="@drawable/modem"
                        android:scaleType="centerCrop"
                        android:layout_marginHorizontal="30sp"/>

                </LinearLayout>
            </HorizontalScrollView>


        </LinearLayout>
    </ScrollView>

</FrameLayout>